; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_action_left_libretro_device_type.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_action_left_libretro_device_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32)* @setting_action_left_libretro_device_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setting_action_left_libretro_device_type(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [128 x i32], align 16
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %11, align 4
  store i32 0, i32* %12, align 4
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %14 = icmp ne %struct.TYPE_6__* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %62

16:                                               ; preds = %2
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %12, align 4
  %20 = getelementptr inbounds [128 x i32], [128 x i32]* %10, i64 0, i64 0
  %21 = getelementptr inbounds [128 x i32], [128 x i32]* %10, i64 0, i64 0
  %22 = call i32 @ARRAY_SIZE(i32* %21)
  %23 = load i32, i32* %12, align 4
  %24 = call i32 @libretro_device_get_size(i32* %20, i32 %22, i32 %23)
  store i32 %24, i32* %11, align 4
  %25 = load i32, i32* %12, align 4
  %26 = call i32 @input_config_get_device(i32 %25)
  store i32 %26, i32* %7, align 4
  store i32 0, i32* %8, align 4
  store i32 0, i32* %9, align 4
  br label %27

27:                                               ; preds = %41, %16
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* %11, align 4
  %30 = icmp ult i32 %28, %29
  br i1 %30, label %31, label %44

31:                                               ; preds = %27
  %32 = load i32, i32* %7, align 4
  %33 = load i32, i32* %9, align 4
  %34 = zext i32 %33 to i64
  %35 = getelementptr inbounds [128 x i32], [128 x i32]* %10, i64 0, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = icmp ne i32 %32, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %31
  br label %41

39:                                               ; preds = %31
  %40 = load i32, i32* %9, align 4
  store i32 %40, i32* %8, align 4
  br label %44

41:                                               ; preds = %38
  %42 = load i32, i32* %9, align 4
  %43 = add i32 %42, 1
  store i32 %43, i32* %9, align 4
  br label %27

44:                                               ; preds = %39, %27
  %45 = load i32, i32* %8, align 4
  %46 = load i32, i32* %11, align 4
  %47 = add i32 %45, %46
  %48 = sub i32 %47, 1
  %49 = load i32, i32* %11, align 4
  %50 = urem i32 %48, %49
  %51 = zext i32 %50 to i64
  %52 = getelementptr inbounds [128 x i32], [128 x i32]* %10, i64 0, i64 %51
  %53 = load i32, i32* %52, align 4
  store i32 %53, i32* %7, align 4
  %54 = load i32, i32* %12, align 4
  %55 = load i32, i32* %7, align 4
  %56 = call i32 @input_config_set_device(i32 %54, i32 %55)
  %57 = load i32, i32* %12, align 4
  %58 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  store i32 %57, i32* %58, align 4
  %59 = load i32, i32* %7, align 4
  %60 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 1
  store i32 %59, i32* %60, align 4
  %61 = call i32 @core_set_controller_port_device(%struct.TYPE_5__* %6)
  store i32 0, i32* %3, align 4
  br label %62

62:                                               ; preds = %44, %15
  %63 = load i32, i32* %3, align 4
  ret i32 %63
}

declare dso_local i32 @libretro_device_get_size(i32*, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @input_config_get_device(i32) #1

declare dso_local i32 @input_config_set_device(i32, i32) #1

declare dso_local i32 @core_set_controller_port_device(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
